--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,11 +27,11 @@
             <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
             <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles.</li>
             <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
-            <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            <li><strong>1 Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
 
         <ol>
-            
+
         </ol>
 </body>
 </html>
