--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Rrecipes</h1>
-    <a href="recipes/lasagna.html"> Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
+        <li><a href="recipes/pizza.html"> Pizza Recipe</a></li>
+        <li><a href="recipes/cheesse-cake.html"> Cheesse Cake Recipe</a></li>
+    </ul>
+ 
 </body>
 </html>
