added id to description and linked css

--- a/recipes/cheesse-cake.html
+++ b/recipes/cheesse-cake.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Cake Recipe</title>
+    <link rel="stylesheet" href="../style/recipe-style.css">
 </head>
 <body>
     <h1>Cheese Cake Recipe</h1>
     <img src="../images/cheese-cake.png">
-    <h2>Description</h2>
+    <h2 id="description">Description</h2>
         <p>
             Cheesecake is a dessert made with a soft fresh cheese, eggs, and sugar.
             It may have a crust or base made from crushed cookies, graham crackers, pastry, or sometimes sponge cake. 
