--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../style/recipe-style.css">
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
     <img src="../images/lasagna.png">
-    <h2>Description</h2>
+    <h2 id="description">Description</h2>
         <p>
             Lasagna is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets.
             In Italian cuisine it is made of stacked layers of pasta alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.
