--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna Recipe</title>
+    <title>Pizza Recipe</title>
+    <link rel="stylesheet" href="../style/recipe-style.css">
 </head>
 <body>
     <h1>Pizza Recipe</h1>
     <img src="../images/pizza.png">
-    <h2>Description</h2>
+    <h2 id="description">Description</h2>
         <p>
             This simple brick-oven pizza recipe has been made famous by several well-known,
              Brooklyn wood-fire pizzerias. Best accompanied by ice-cold, pilsner-style lager beer.    
