--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Rrecipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
-        <li><a href="recipes/pizza.html"> Pizza Recipe</a></li>
-        <li><a href="recipes/cheesse-cake.html"> Cheesse Cake Recipe</a></li>
+        <li class="recipe_name"><a href="recipes/lasagna.html"> Lasagna Recipe</a></li>
+        <li class="recipe_name"><a href="recipes/pizza.html"> Pizza Recipe</a></li>
+        <li class="recipe_name"><a href="recipes/cheesse-cake.html"> Cheesse Cake Recipe</a></li>
     </ul>
  
 </body>
